qt/gen_qtreewidget.nim

proc fQTreeWidget_virtualbase_commitData(self: pointer, editor: pointer): void{.importc: "QTreeWidget_virtualbase_commitData".}
proc fcQTreeWidget_override_virtual_commitData(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_commitData".}
proc fQTreeWidget_virtualbase_editorDestroyed(self: pointer, editor: pointer): void{.importc: "QTreeWidget_virtualbase_editorDestroyed".}
proc fcQTreeWidget_override_virtual_editorDestroyed(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_editorDestroyed".}
proc fQTreeWidget_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool{.importc: "QTreeWidget_virtualbase_edit2".}
proc fcQTreeWidget_override_virtual_edit2(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_edit2".}
proc fQTreeWidget_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint{.importc: "QTreeWidget_virtualbase_selectionCommand".}
proc fcQTreeWidget_override_virtual_selectionCommand(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_selectionCommand".}
proc fQTreeWidget_virtualbase_startDrag(self: pointer, supportedActions: cint): void{.importc: "QTreeWidget_virtualbase_startDrag".}
proc fcQTreeWidget_override_virtual_startDrag(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_startDrag".}
proc fQTreeWidget_virtualbase_viewOptions(self: pointer, ): pointer{.importc: "QTreeWidget_virtualbase_viewOptions".}
proc fcQTreeWidget_override_virtual_viewOptions(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_viewOptions".}
proc fQTreeWidget_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QTreeWidget_virtualbase_focusNextPrevChild".}
proc fcQTreeWidget_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_focusNextPrevChild".}
proc fQTreeWidget_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_dragEnterEvent".}
proc fcQTreeWidget_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_dragEnterEvent".}
proc fQTreeWidget_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_dragLeaveEvent".}
proc fcQTreeWidget_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_dragLeaveEvent".}
proc fQTreeWidget_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_focusInEvent".}
proc fcQTreeWidget_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_focusInEvent".}
proc fQTreeWidget_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_focusOutEvent".}
proc fcQTreeWidget_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_focusOutEvent".}
proc fQTreeWidget_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_resizeEvent".}
proc fcQTreeWidget_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_resizeEvent".}
proc fQTreeWidget_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_inputMethodEvent".}
proc fcQTreeWidget_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_inputMethodEvent".}
proc fQTreeWidget_virtualbase_eventFilter(self: pointer, objectVal: pointer, event: pointer): bool{.importc: "QTreeWidget_virtualbase_eventFilter".}
proc fcQTreeWidget_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_eventFilter".}
proc fQTreeWidget_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QTreeWidget_virtualbase_minimumSizeHint".}
proc fcQTreeWidget_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_minimumSizeHint".}
proc fQTreeWidget_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QTreeWidget_virtualbase_sizeHint".}
proc fcQTreeWidget_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_sizeHint".}
proc fQTreeWidget_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QTreeWidget_virtualbase_setupViewport".}
proc fcQTreeWidget_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_setupViewport".}
proc fQTreeWidget_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QTreeWidget_virtualbase_wheelEvent".}
proc fcQTreeWidget_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_wheelEvent".}
proc fQTreeWidget_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QTreeWidget_virtualbase_contextMenuEvent".}
proc fcQTreeWidget_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_contextMenuEvent".}
proc fQTreeWidget_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QTreeWidget_virtualbase_changeEvent".}
proc fcQTreeWidget_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_changeEvent".}
proc fQTreeWidget_virtualbase_devType(self: pointer, ): cint{.importc: "QTreeWidget_virtualbase_devType".}
proc fcQTreeWidget_override_virtual_devType(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_devType".}
proc fQTreeWidget_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QTreeWidget_virtualbase_setVisible".}
proc fcQTreeWidget_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_setVisible".}
proc fQTreeWidget_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QTreeWidget_virtualbase_heightForWidth".}
proc fcQTreeWidget_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_heightForWidth".}
proc fQTreeWidget_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QTreeWidget_virtualbase_hasHeightForWidth".}
proc fcQTreeWidget_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_hasHeightForWidth".}
proc fQTreeWidget_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QTreeWidget_virtualbase_paintEngine".}
proc fcQTreeWidget_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_paintEngine".}
proc fQTreeWidget_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_keyReleaseEvent".}
proc fcQTreeWidget_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_keyReleaseEvent".}
proc fQTreeWidget_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_enterEvent".}
proc fcQTreeWidget_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_enterEvent".}
proc fQTreeWidget_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_leaveEvent".}
proc fcQTreeWidget_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_leaveEvent".}
proc fQTreeWidget_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_moveEvent".}
proc fcQTreeWidget_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_moveEvent".}
proc fQTreeWidget_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_closeEvent".}
proc fcQTreeWidget_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_closeEvent".}
proc fQTreeWidget_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_tabletEvent".}
proc fcQTreeWidget_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_tabletEvent".}
proc fQTreeWidget_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_actionEvent".}
proc fcQTreeWidget_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_actionEvent".}
proc fQTreeWidget_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_showEvent".}
proc fcQTreeWidget_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_showEvent".}
proc fQTreeWidget_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_hideEvent".}
proc fcQTreeWidget_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_hideEvent".}
proc fQTreeWidget_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QTreeWidget_virtualbase_nativeEvent".}
proc fcQTreeWidget_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_nativeEvent".}
proc fQTreeWidget_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QTreeWidget_virtualbase_metric".}
proc fcQTreeWidget_override_virtual_metric(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_metric".}
proc fQTreeWidget_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QTreeWidget_virtualbase_initPainter".}
proc fcQTreeWidget_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_initPainter".}
proc fQTreeWidget_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QTreeWidget_virtualbase_redirected".}
proc fcQTreeWidget_override_virtual_redirected(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_redirected".}
proc fQTreeWidget_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QTreeWidget_virtualbase_sharedPainter".}
proc fcQTreeWidget_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_sharedPainter".}
proc fQTreeWidget_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_childEvent".}
proc fcQTreeWidget_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_childEvent".}
proc fQTreeWidget_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTreeWidget_virtualbase_customEvent".}
proc fcQTreeWidget_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_customEvent".}
proc fQTreeWidget_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTreeWidget_virtualbase_connectNotify".}
proc fcQTreeWidget_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_connectNotify".}
proc fQTreeWidget_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTreeWidget_virtualbase_disconnectNotify".}
proc fcQTreeWidget_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTreeWidget_override_virtual_disconnectNotify".}
proc fcQTreeWidget_staticMetaObject(): pointer {.importc: "QTreeWidget_staticMetaObject".}
proc fcQTreeWidget_delete(self: pointer) {.importc: "QTreeWidget_delete".}


func init*(T: type QTreeWidgetItem, h: ptr cQTreeWidgetItem): QTreeWidgetItem =
  T(h: h)
proc create*(T: type QTreeWidgetItem, ): QTreeWidgetItem =

  QTreeWidgetItem.init(fcQTreeWidgetItem_new())
proc create*(T: type QTreeWidgetItem, strings: seq[string]): QTreeWidgetItem =

  var strings_CArray = newSeq[struct_miqt_string](len(strings))
  for i in 0..<len(strings):
    strings_CArray[i] = struct_miqt_string(data: strings[i], len: csize_t(len(strings[i])))
